# MatrixMultiplication

./: Dockerfile  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
matMul/: CMakeLists.txt
matMul/include/: matMul.h
matMul/src/: matrixJNI.cpp  matrixNative.cpp
src/jvmMain/kotlin/: Main.kt  Matrix.kt  matrixMultiply.kt
src/jvmTest/kotlin/: Test.kt
src/nativeInterop/cinterop/: matMul.def
src/nativeMain/kotlin/: Main.kt  Matrix.kt
src/nativeTest/kotlin/: Test.kt
